Fix gap issue on product page on narrow screens

--- a/src/styles/ProductDetail.css
+++ b/src/styles/ProductDetail.css
@@ -57,5 +57,6 @@
 @media (max-width: 700px) {
 	#product .details {
 		flex-direction: column;
+		gap: 1rem;
 	}
 }
